Updates based on feedback to convert  to HashSet and be compatible with Java 8